--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:enableOnBackInvokedCallback="true"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -14,12 +16,15 @@
         android:theme="@style/Theme.App_perfume"
         tools:targetApi="31">
         <activity
+            android:name=".menu_client"
+            android:exported="false" />
+        <activity
             android:name=".edit_product"
             android:exported="false" />
         <activity
             android:name=".menu"
             android:exported="false" />
-        <activity   
+        <activity
             android:name=".register"
             android:exported="false" />
         <activity
