--- a/settings.gradle
+++ b/settings.gradle
@@ -1,16 +1,19 @@
 pluginManagement {
     repositories {
         google()
-        mavenCentral()
+        jcenter()
         gradlePluginPortal()
     }
 }
+
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
+        maven { url 'https://jitpack.io' }
         google()
-        mavenCentral()
+        jcenter()
     }
 }
+
 rootProject.name = "app_perfume"
 include ':app'
