--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,18 @@
         android:theme="@style/Theme.App_perfume"
         tools:targetApi="31">
         <activity
+            android:name=".my_order_client"
+            android:exported="false" />
+        <activity
+            android:name=".check_order_admin"
+            android:exported="false" />
+        <activity
+            android:name=".success_buy"
+            android:exported="false" />
+        <activity
+            android:name=".check_out"
+            android:exported="false" />
+        <activity
             android:name=".menu_client"
             android:exported="false" />
         <activity
